# sok-ha

./: AGENTS.md  CHANGELOG.md  README.md  hacs.json  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  test.yml  validate.yml
custom_components/sok/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/sok_battery/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py
tests/: test_cell_sensors.py  test_coordinator.py  test_energy_sensors.py  test_remove_entry_device.py  test_sensor_descriptions.py  test_sensor_no_data.py
