[project]
name = "sok-ha"
version = "1.0.1"
description = "Home Assistant integration for monitoring SOK devices via BLE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "homeassistant>=2025.4.4",
    "sok-ble>=0.1.9",
]

[dependency-groups]
dev = [
    "aiousbwatcher>=1.1.1",
    "bleak>=0.22.3",
    "pyserial>=3.5",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.3",
    "ty>=0.0.15",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "asyncio: mark test as an asyncio coroutine",
]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["I", "E", "F"]  # I = isort, E = pycodestyle, F = pyflakes

[tool.ruff.format]
quote-style = "double"
